update yolo func

--- a/RoadFollowingFeedback.ipynb
+++ b/RoadFollowingFeedback.ipynb
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "text": [
       "[System] WebSocket 프로세서 시작\n",
-      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 61635))\n"
+      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 61248))\n"
      ]
     }
    ],
@@ -85,11 +85,8 @@
    ],
    "source": [
     "model = torchvision.models.resnet18(pretrained=False)\n",
-    "\n",
-    "model.fc = torch.nn.Sequential(\n",
-    "    torch.nn.Linear(512, 2)\n",
-    ")\n",
-    "model.load_state_dict(torch.load('best_steering_model_xy_test.pth',map_location=torch.device('cpu')))\n",
+    "model.fc = torch.nn.Linear(512, 2)\n",
+    "model.load_state_dict(torch.load('best_steering_model_xy_test_12_15.pth',map_location=torch.device('cpu')))\n",
     "\n",
     "# model.fc = torch.nn.Linear(512, 2)\n",
     "# model.load_state_dict(torch.load('best_steering_model_xy_test_1.pth', map_location=torch.device('cpu')))\n",
@@ -135,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7269c1e26a4d4fc4b2dbbcad80cf7215",
+       "model_id": "0364f6e98acb4ae7b02464e6c2380217",
        "version_major": 2,
        "version_minor": 0
       },
