update yolo model

--- a/LiveDemo.ipynb
+++ b/LiveDemo.ipynb
@@ -25,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
+      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
+      "[System] WebSocket 프로세서 시작\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -39,22 +48,14 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
-      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1785b5c338141609bd3cd6120565e0e",
+       "model_id": "f35f90fcefa2487b870e078185ddcea2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'')"
+       "Image(value=b'', format='jpeg', height='225', width='225')"
       ]
      },
      "metadata": {},
@@ -64,33 +65,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[System] WebSocket 프로세서 시작\n"
+      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 61811))\n"
      ]
     }
    ],
    "source": [
     "import torchvision\n",
     "import torch\n",
-    "\n",
-    "model = torchvision.models.resnet18(pretrained=False)\n",
-    "\n",
-    "# model.fc = torch.nn.Sequential(\n",
-    "#     torch.nn.Linear(512, 2)\n",
-    "# )\n",
-    "model.fc = torch.nn.Linear(512, 2)\n",
-    "\n",
-    "model.load_state_dict(torch.load('best_steering_model_xy_test_12_16_2.pth', map_location=torch.device('cuda')))\n",
-    "\n",
-    "device = torch.device('cuda')\n",
-    "model = model.to(device)\n",
-    "#.half() : 부동소수점 형식을 16비트로 낮춰서 메모리 사용량을 줄이고 연산 속도를 높인다.\n",
-    "model = model.eval().half()\n",
-    "\n",
     "import torchvision.transforms as transforms\n",
     "import torch.nn.functional as F\n",
     "import cv2\n",
     "import PIL.Image\n",
     "import numpy as np\n",
+    "from IPython.display import display\n",
+    "import ipywidgets\n",
+    "import traitlets\n",
+    "from robotpal import Camera, bgr8_to_jpeg\n",
+    "from robotpal import Robot\n",
+    "from robotpal.SCSCtrl import TTLServo\n",
+    "\n",
+    "model = torchvision.models.resnet18(pretrained=False)\n",
+    "model.fc = torch.nn.Linear(512, 2)\n",
+    "model.load_state_dict(torch.load('best_steering_model_xy_test_12_17.pth', map_location=torch.device('cuda')))\n",
+    "\n",
+    "device = torch.device('cuda')\n",
+    "model = model.to(device)\n",
+    "model = model.eval().half()\n",
     "\n",
     "mean = torch.Tensor([0.485, 0.456, 0.406]).cuda().half()\n",
     "std = torch.Tensor([0.229, 0.224, 0.225]).cuda().half()\n",
@@ -102,13 +102,8 @@
     "    return image[None, ...]\n",
     "\n",
     "\n",
-    "from IPython.display import display\n",
-    "import ipywidgets\n",
-    "import traitlets\n",
-    "from robotpal import Camera, bgr8_to_jpeg\n",
-    "\n",
     "camera = Camera()\n",
-    "image_widget = ipywidgets.Image()\n",
+    "image_widget = ipywidgets.Image(format='jpeg', width=225, height=225)\n",
     "traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=bgr8_to_jpeg)\n",
     "display(image_widget)"
    ]
@@ -122,47 +117,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
       "[Send Servo] ID: 5, Angle: 24.988235294117647, Speed: 20.0\n",
-      "Camera Ready!\n",
-      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
-      "[System] WebSocket 프로세서 시작\n"
+      "Camera Ready!\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'ipywidgets' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m TTLServo.servoAngleCtrl(\u001b[32m5\u001b[39m, -\u001b[32m25\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m100\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mCamera Ready!\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m speed_gain_slider = \u001b[43mipywidgets\u001b[49m.FloatSlider(\u001b[38;5;28mmin\u001b[39m=\u001b[32m0.0\u001b[39m, \u001b[38;5;28mmax\u001b[39m=\u001b[32m1.0\u001b[39m, step=\u001b[32m0.01\u001b[39m, description=\u001b[33m'\u001b[39m\u001b[33mspeed gain\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     10\u001b[39m steering_gain_slider = ipywidgets.FloatSlider(\u001b[38;5;28mmin\u001b[39m=\u001b[32m0.0\u001b[39m, \u001b[38;5;28mmax\u001b[39m=\u001b[32m1.0\u001b[39m, step=\u001b[32m0.01\u001b[39m, value=\u001b[32m0.2\u001b[39m, description=\u001b[33m'\u001b[39m\u001b[33msteering gain\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m steering_dgain_slider = ipywidgets.FloatSlider(\u001b[38;5;28mmin\u001b[39m=\u001b[32m0.0\u001b[39m, \u001b[38;5;28mmax\u001b[39m=\u001b[32m0.5\u001b[39m, step=\u001b[32m0.001\u001b[39m, value=\u001b[32m1\u001b[39m, description=\u001b[33m'\u001b[39m\u001b[33msteering kd\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'ipywidgets' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7d327cde35e4cd893905e2d3b5ec1eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='speed gain', max=1.0, step=0.01)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35deb84210a3490b925234bde37747e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.2, description='steering gain', max=1.0, step=0.01)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d07324144f3410a96b97b56d121a688",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.5, description='steering kd', max=0.5, step=0.001)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87ebcbe083bf4eafa563c3dc4281193d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='steering bias', max=0.3, min=-0.3, step=0.01)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5259c56bb98a4ecb8c0f422b419c8267",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=0.0, description='y', max=1.0, orientation='vertical'), FloatSlider(value=0.0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "debc041f3f534660a4489d3be7e27872",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='x', max=1.0, min=-1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d1b6f023d984cc789b562fe0e586ce7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='steering', max=1.0, min=-1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from robotpal import Robot\n",
-    "from robotpal.SCSCtrl import TTLServo\n",
-    "\n",
     "robot = Robot()\n",
     "\n",
     "TTLServo.servoAngleCtrl(5, -25, 1, 100)\n",
     "print('Camera Ready!')\n",
     "\n",
-    "speed_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, description='speed gain')\n",
-    "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, value=0.2, description='steering gain')\n",
-    "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.5, step=0.001, value=1, description='steering kd')\n",
-    "steering_bias_slider = ipywidgets.FloatSlider(min=-0.3, max=0.3, step=0.01, value=0.0, description='steering bias')\n",
-    "\n",
-    "display(speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider)\n",
     "\n",
     "x_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, description='x')\n",
     "y_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='y')\n",
@@ -188,16 +258,16 @@
     "    \n",
     "    # 인공지능 무인운반차량(AGV)의 속도 표시\n",
     "    # speed_slider.value = speed_gain_slider.value\n",
-    "    speed_slider.value = 0.25\n",
+    "    speed_slider.value = 0.32\n",
     "    \n",
     "    #조향값 계산\n",
     "    angle = np.arctan2(x, y)\n",
     "    \n",
     "    #PID 제어를 이용한 모터 제어\n",
-    "    pid = angle * steering_gain_slider.value + (angle - angle_last) * steering_dgain_slider.value\n",
+    "    pid = angle * 0.2 + (angle - angle_last) * 0.5\n",
     "    angle_last = angle\n",
     "    \n",
-    "    steering_slider.value = pid + steering_bias_slider.value\n",
+    "    steering_slider.value = pid + 0\n",
     "    \n",
     "    robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), -0.9)\n",
     "    robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), -0.9)\n",
