update python code

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,16 +12,7 @@
      "text": [
       "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
       "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
-      "[System] WebSocket 프로세서 시작\n",
-      "[Send Servo] ID: 5, Angle: 24.988235294117647, Speed: 20.0\n",
-      "[Send Servo] ID: 1, Angle: 0.0, Speed: 20.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 57425))\n"
+      "[System] WebSocket 프로세서 시작\n"
      ]
     }
    ],
@@ -31,10 +22,7 @@
     "import robotpal.robot_config as cfg\n",
     "import robotpal.robot_vision as Rvision\n",
     "import robotpal.robot_logic as Rlogic\n",
-    "import time\n",
-    "\n",
-    "# 1. 하드웨어 초기화\n",
-    "cfg.init_servos()"
+    "import time"
    ]
   },
   {
@@ -43,6 +31,14 @@
    "id": "aedf554d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Send Servo] ID: 5, Angle: 24.988235294117647, Speed: 20.0\n",
+      "[Send Servo] ID: 1, Angle: 0.0, Speed: 20.0\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -56,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fabcf81cf6f84b888c88e093e6664457",
+       "model_id": "5ea55f30eef448a78673c3b7f72f7836",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4bcb2be6b194b74ada51303c891b5ea",
+       "model_id": "09445d416029444e97ffc42d203672e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,12 +80,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fc7d60226784071a3b0452a931d4e69",
+       "model_id": "091972335e5c4a3f9019dbd6e1a19688",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Textarea(value='[10:11:33] >>> 감지 스레드 시작됨\\n[10:11:33] >>> 비전 시스템 초기화 완료\\n[10:11:31] >>> YOLO 및 OCR 모델 로딩 중...\\…"
+       "Textarea(value='[14:20:55] >>> 감지 스레드 시작됨\\n[14:20:55] >>> 비전 시스템 초기화 완료\\n[14:20:53] >>> YOLO 및 OCR 모델 로딩 중...\\…"
       ]
      },
      "metadata": {},
@@ -97,6 +93,9 @@
     }
    ],
    "source": [
+    "# 1. 하드웨어 초기화\n",
+    "cfg.init_servos()\n",
+    "\n",
     "# 2. 비전 시스템 및 컨트롤러 생성\n",
     "vision_sys = Rvision.VisionSystem()\n",
     "controller = Rlogic.DrivingController(vision_sys)\n",
