update robot code

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,6 +14,13 @@
       "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
       "[System] WebSocket 프로세서 시작\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 59781))\n"
+     ]
     }
    ],
    "source": [
@@ -35,8 +42,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Send Servo] ID: 5, Angle: 24.988235294117647, Speed: 20.0\n",
-      "[Send Servo] ID: 1, Angle: 0.0, Speed: 20.0\n"
+      "[Send Servo] ID: 1, Angle: 0.0, Speed: 30.0\n",
+      "[Send Servo] ID: 5, Angle: 24.988235294117647, Speed: 30.0\n",
+      "[16:10:00] >>> 서보 모터 초기화 완료\n",
+      "[16:10:00] >>> 조향 모델 로딩 중...\n"
      ]
     },
     {
@@ -50,14 +59,23 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16:10:01] >>> YOLO 및 OCR 모델 로딩 중...\n",
+      "[16:10:03] >>> 비전 시스템 초기화 완료\n",
+      "[16:10:03] >>> 감지 스레드 시작됨\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ea55f30eef448a78673c3b7f72f7836",
+       "model_id": "73f6f9f7d83b434d930f1b29df0be980",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'', format='jpeg', height='500', width='500')"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x02\\x01\\x0…"
       ]
      },
      "metadata": {},
@@ -66,12 +84,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09445d416029444e97ffc42d203672e0",
+       "model_id": "e1e86be266b94af0a8b4971d98bcf9db",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatSlider(value=0.0, description='speed', max=1.0, orientation='vertical'), FloatSlider(value…"
+       "HBox(children=(FloatSlider(value=0.0, description='speed', max=1.0, min=-1.0, orientation='vertical'), FloatSl…"
       ]
      },
      "metadata": {},
@@ -80,16 +98,23 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "091972335e5c4a3f9019dbd6e1a19688",
+       "model_id": "c5befd5a8f04453ba7f7a56ed8da61cb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Textarea(value='[14:20:55] >>> 감지 스레드 시작됨\\n[14:20:55] >>> 비전 시스템 초기화 완료\\n[14:20:53] >>> YOLO 및 OCR 모델 로딩 중...\\…"
+       "Textarea(value='[16:10:03] >>> 감지 스레드 시작됨\\n[16:10:03] >>> 비전 시스템 초기화 완료\\n[16:10:01] >>> YOLO 및 OCR 모델 로딩 중...\\…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16:10:04] >>> 시스템 가동 시작!\n"
+     ]
     }
    ],
    "source": [
@@ -112,12 +137,6 @@
     "display(cfg.image_widget)\n",
     "display(ui_layout)\n",
     "display(cfg.log_widget)\n",
-    "\n",
-    "# 카메라 연결 및 실행 시작\n",
-    "try: \n",
-    "    cfg.camera.unobserve_all()\n",
-    "except: \n",
-    "    pass\n",
     "\n",
     "# 초기 실행 및 이벤트 연결\n",
     "controller.execute({'new': cfg.camera.value})\n",
