--- a/LiveDemo.ipynb
+++ b/LiveDemo.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f35f90fcefa2487b870e078185ddcea2",
+       "model_id": "2639dcdd7921419d8176da73e236880b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 61811))\n"
+      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 58825))\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,63 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7d327cde35e4cd893905e2d3b5ec1eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.0, description='speed gain', max=1.0, step=0.01)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35deb84210a3490b925234bde37747e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.2, description='steering gain', max=1.0, step=0.01)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d07324144f3410a96b97b56d121a688",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.5, description='steering kd', max=0.5, step=0.001)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87ebcbe083bf4eafa563c3dc4281193d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.0, description='steering bias', max=0.3, min=-0.3, step=0.01)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5259c56bb98a4ecb8c0f422b419c8267",
+       "model_id": "c9bdbd236e82438e8edfff5e45c09605",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "debc041f3f534660a4489d3be7e27872",
+       "model_id": "e95ea967aa72459c8d3fe65030ebf96d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d1b6f023d984cc789b562fe0e586ce7",
+       "model_id": "d86947f8c58545d6b95ddf8cda546ec3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,6 +169,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute '__array_interface__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 45\u001b[39m\n\u001b[32m     42\u001b[39m     robot.left_motor.value = \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mmin\u001b[39m(speed_slider.value + steering_slider.value, \u001b[32m1.0\u001b[39m), -\u001b[32m0.9\u001b[39m)\n\u001b[32m     43\u001b[39m     robot.right_motor.value = \u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mmin\u001b[39m(speed_slider.value - steering_slider.value, \u001b[32m1.0\u001b[39m), -\u001b[32m0.9\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m45\u001b[39m \u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mnew\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mcamera\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     47\u001b[39m camera.observe(execute, names=\u001b[33m'\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 21\u001b[39m, in \u001b[36mexecute\u001b[39m\u001b[34m(change)\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mglobal\u001b[39;00m angle, angle_last\n\u001b[32m     20\u001b[39m image = change[\u001b[33m'\u001b[39m\u001b[33mnew\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m xy = model(\u001b[43mpreprocess\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m)\u001b[49m).detach().float().cpu().numpy().flatten()\n\u001b[32m     22\u001b[39m x = xy[\u001b[32m0\u001b[39m]\n\u001b[32m     23\u001b[39m y = (\u001b[32m0.5\u001b[39m - xy[\u001b[32m1\u001b[39m]) / \u001b[32m2.0\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 27\u001b[39m, in \u001b[36mpreprocess\u001b[39m\u001b[34m(image)\u001b[39m\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpreprocess\u001b[39m(image):\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     image = \u001b[43mPIL\u001b[49m\u001b[43m.\u001b[49m\u001b[43mImage\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfromarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     28\u001b[39m     image = transforms.functional.to_tensor(image).to(device).half()\n\u001b[32m     29\u001b[39m     image.sub_(mean[:, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m]).div_(std[:, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\PIL\\Image.py:3297\u001b[39m, in \u001b[36mfromarray\u001b[39m\u001b[34m(obj, mode)\u001b[39m\n\u001b[32m   3250\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfromarray\u001b[39m(obj: SupportsArrayInterface, mode: \u001b[38;5;28mstr\u001b[39m | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m) -> Image:\n\u001b[32m   3251\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   3252\u001b[39m \u001b[33;03m    Creates an image memory from an object exporting the array interface\u001b[39;00m\n\u001b[32m   3253\u001b[39m \u001b[33;03m    (using the buffer protocol)::\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   3295\u001b[39m \u001b[33;03m    .. versionadded:: 1.1.6\u001b[39;00m\n\u001b[32m   3296\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3297\u001b[39m     arr = \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__array_interface__\u001b[49m\n\u001b[32m   3298\u001b[39m     shape = arr[\u001b[33m\"\u001b[39m\u001b[33mshape\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m   3299\u001b[39m     ndim = \u001b[38;5;28mlen\u001b[39m(shape)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'NoneType' object has no attribute '__array_interface__'"
+     ]
     }
    ],
    "source": [
