update example code

--- a/LiveDemo_capture_color_cong.ipynb
+++ b/LiveDemo_capture_color_cong.ipynb
@@ -43,14 +43,19 @@
     "from datetime import datetime\n",
     "\n",
     "# --------------------------------------------------------------\n",
-    "# 1. 초기 설정 (모델, 카메라, 로봇)\n",
+    "# 1. 초기 설정 (고화질 카메라 연결)\n",
     "# --------------------------------------------------------------\n",
+    "# [핵심] server.py를 수정했으므로 이제 고화질을 받아올 수 있습니다.\n",
+    "CAM_WIDTH = 816\n",
+    "CAM_HEIGHT = 616\n",
+    "\n",
+    "camera = Camera.instance(width=CAM_WIDTH, height=CAM_HEIGHT)\n",
+    "robot = Robot()\n",
+    "\n",
     "# 모델 로드\n",
     "model = torchvision.models.resnet18(pretrained=False)\n",
     "model.fc = torch.nn.Linear(512, 2)\n",
-    "# 파일명이 맞는지 확인하세요\n",
     "model.load_state_dict(torch.load('best_steering_model_xy_test_12_17.pth', map_location=torch.device('cuda')))\n",
-    "\n",
     "device = torch.device('cuda')\n",
     "model = model.to(device)\n",
     "model = model.eval().half()\n",
@@ -62,11 +67,7 @@
     "    image = PIL.Image.fromarray(image)\n",
     "    image = transforms.functional.to_tensor(image).to(device).half()\n",
     "    image.sub_(mean[:, None, None]).div_(std[:, None, None])\n",
-    "    return image[None, ... ]\n",
-    "\n",
-    "# 카메라 및 로봇 객체 생성 (해상도는 기본값 사용)\n",
-    "camera = Camera.instance()\n",
-    "robot = Robot()"
+    "    return image[None, ... ]"
    ]
   },
   {
@@ -82,108 +83,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --------------------------------------------------------------\n",
-    "# 2. [수정됨] 최적화된 색상 인식 스레드 (ROI + 갱신 제한)\n",
-    "# --------------------------------------------------------------\n",
+    "TTLServo.servoAngleCtrl(5, 45, 1, 100)\n",
     "\n",
-    "TTLServo.servoAngleCtrl(5, 25, 1, 100)\n",
-    "\n",
+    "# --------------------------------------------------------------\n",
+    "# 2. 색상 인식 및 고화질 스냅샷 준비 (스레드)\n",
+    "# --------------------------------------------------------------\n",
+    "frame_width = CAM_WIDTH\n",
+    "frame_height = CAM_HEIGHT\n",
     "colorHSVvalueList = []\n",
     "max_len = 20\n",
-    "th_flag = True  # 스레드 제어 플래그\n",
+    "th_flag = True\n",
     "\n",
-    "# 위젯 초기화\n",
+    "# UI 위젯\n",
     "colorlblMax = ipywidgets.Text(description=\"Max HSV:\", value=\"Wait...\")\n",
     "colorlblMin = ipywidgets.Text(description=\"Min HSV:\", value=\"Wait...\")\n",
     "image_widget = ipywidgets.Image(format='jpeg', width=300, height=300)\n",
     "\n",
-    "# 스냅샷용 변수\n",
+    "# 스냅샷 저장용 전역 변수\n",
     "latest_annotated_frame = None\n",
     "frame_lock = threading.Lock()\n",
     "\n",
     "def colorRecog():\n",
     "    global latest_annotated_frame, colorHSVvalueList\n",
     "    \n",
-    "    # 화면 갱신 빈도를 조절할 카운터\n",
-    "    draw_counter = 0\n",
+    "    # [좌표 보정] 해상도가 816px로 커졌으니 이동 값도 키웁니다.\n",
+    "    # (224px일 때 60이었던 비율 -> 816px에서는 약 220~230)\n",
+    "    move_x = -73\n",
+    "    move_y = 220\n",
     "    \n",
     "    while th_flag:\n",
     "        if camera.value is None:\n",
     "            time.sleep(0.1)\n",
     "            continue\n",
     "            \n",
-    "        # 1. 이미지 복사 (필수)\n",
+    "        # 1. 고화질 원본 복사 (server.py 수정 덕분에 816x616 이미지가 들어옴)\n",
     "        image = camera.value.copy()\n",
     "        \n",
-    "        # 이미지 크기 확인 및 중심점 계산\n",
-    "        h, w, _ = image.shape\n",
-    "        cy, cx = int(h / 2), int(w / 2)\n",
+    "        # 2. 색상 분석 및 그리기 (고화질 이미지 위에 수행)\n",
+    "        hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
+    "        hsv = cv2.blur(hsv, (15, 15))\n",
+    "        \n",
+    "        # 좌표 계산\n",
+    "        center_x = int(frame_width / 2) + move_x\n",
+    "        center_y = int(frame_height / 2) + move_y\n",
+    "        \n",
+    "        center_x = max(0, min(center_x, frame_width - 1))\n",
+    "        center_y = max(0, min(center_y, frame_height - 1))\n",
+    "        \n",
+    "        hsvValue = hsv[center_y, center_x]\n",
+    "\n",
+    "        colorHSVvalueList.append(hsvValue)\n",
+    "        if len(colorHSVvalueList) > max_len:\n",
+    "            del colorHSVvalueList[0]\n",
+    "            \n",
+    "        if len(colorHSVvalueList) > 0:\n",
+    "            max_h, max_s, max_v = np.maximum.reduce(colorHSVvalueList)\n",
+    "            min_h, min_s, min_v = np.minimum.reduce(colorHSVvalueList)\n",
+    "\n",
+    "            # 박스 크기 키움 (해상도에 맞춰 20 -> 60)\n",
+    "            rect_s = 60\n",
+    "            cv2.rectangle(image,\n",
+    "                          (center_x - int(rect_s/2), center_y - int(rect_s/2)),\n",
+    "                          (center_x + int(rect_s/2), center_y + int(rect_s/2)),\n",
+    "                          (255, 255, 255), 2)\n",
+    "            \n",
+    "            # 글씨 크기 키움 (0.3 -> 0.8) \n",
+    "            # 해상도가 커져서 0.3으로 하면 안 보입니다.\n",
+    "            cv2.putText(image, f'max:{max_h,max_s,max_v}', (30, 550), \n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.8, (0,255,255), 2)\n",
+    "            cv2.putText(image, f'min:{min_h,min_s,min_v}', (30, 580), \n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.8, (255,255,255), 2)\n",
+    "            \n",
+    "            colorlblMax.value = f\"{max_h},{max_s},{max_v}\"\n",
+    "            colorlblMin.value = f\"{min_h},{min_s},{min_v}\"\n",
     "        \n",
     "        # ---------------------------------------------------------\n",
-    "        # [최적화 1] 중앙 20x20 픽셀만 잘라서(ROI) 분석\n",
-    "        # 전체 이미지를 변환하지 않아 CPU 부하를 획기적으로 줄임\n",
+    "        # [핵심 1] 스냅샷 저장용 변수에는 '고화질 원본'을 담습니다.\n",
+    "        # 버튼을 누르면 이 변수에 있는 816x616 이미지가 저장됩니다.\n",
     "        # ---------------------------------------------------------\n",
-    "        roi_size = 10 # 중앙에서 +-10 (총 20x20 크기)\n",
-    "        \n",
-    "        # 범위 예외 처리\n",
-    "        y1 = max(0, cy - roi_size)\n",
-    "        y2 = min(h, cy + roi_size)\n",
-    "        x1 = max(0, cx - roi_size)\n",
-    "        x2 = min(w, cx + roi_size)\n",
-    "        \n",
-    "        # ROI 잘라내기 및 변환 (매우 빠름)\n",
-    "        roi = image[y1:y2, x1:x2]\n",
-    "        roi_hsv = cv2.cvtColor(roi, cv2.COLOR_BGR2HSV)\n",
-    "        roi_hsv = cv2.blur(roi_hsv, (5, 5)) # 작은 영역이라 블러도 빠름\n",
-    "        \n",
-    "        # ROI의 중심값 가져오기\n",
-    "        rh, rw, _ = roi_hsv.shape\n",
-    "        if rh > 0 and rw > 0:\n",
-    "            hsvValue = roi_hsv[int(rh/2), int(rw/2)]\n",
-    "\n",
-    "            # 데이터 집계\n",
-    "            colorHSVvalueList.append(hsvValue)\n",
-    "            if len(colorHSVvalueList) > max_len:\n",
-    "                del colorHSVvalueList[0]\n",
-    "                \n",
-    "            if len(colorHSVvalueList) > 0:\n",
-    "                max_h, max_s, max_v = np.maximum.reduce(colorHSVvalueList)\n",
-    "                min_h, min_s, min_v = np.minimum.reduce(colorHSVvalueList)\n",
-    "\n",
-    "                # 시각화 (원본 이미지 복사본에 그리기)\n",
-    "                # 중앙 타겟 박스\n",
-    "                cv2.rectangle(image, (cx-roi_size, cy-roi_size), (cx+roi_size, cy+roi_size), (255, 255, 255), 1)\n",
-    "                \n",
-    "                # 텍스트 표시\n",
-    "                cv2.putText(image, f'Max:{max_h, max_s, max_v}', (10, h-30), \n",
-    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 255), 1)\n",
-    "                cv2.putText(image, f'Min:{min_h, min_s, min_v}', (10, h-10), \n",
-    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 1)\n",
-    "                \n",
-    "                # 텍스트 위젯 업데이트 (가벼움)\n",
-    "                colorlblMax.value = f\"{max_h},{max_s},{max_v}\"\n",
-    "                colorlblMin.value = f\"{min_h},{min_s},{min_v}\"\n",
-    "        \n",
-    "        # 스냅샷용 이미지는 항상 최신으로 저장\n",
     "        with frame_lock:\n",
     "            latest_annotated_frame = image\n",
     "            \n",
     "        # ---------------------------------------------------------\n",
-    "        # [최적화 2] 화면 전송(Display) 빈도 줄이기\n",
-    "        # 매번 보내면 렉 걸림 -> 3번에 1번만 전송 (약 0.2초 간격)\n",
+    "        # [핵심 2] 화면 표시용은 작게 줄여서 보냅니다.\n",
+    "        # 816px를 매번 보내면 렉 걸리므로 300px로 리사이즈!\n",
     "        # ---------------------------------------------------------\n",
-    "        draw_counter += 1\n",
-    "        if draw_counter % 3 == 0:\n",
-    "            image_widget.value = bgr8_to_jpeg(image)\n",
+    "        preview_img = cv2.resize(image, (300, 300))\n",
+    "        image_widget.value = bgr8_to_jpeg(preview_img)\n",
     "        \n",
-    "        # [최적화 3] CPU 양보 (주행 스레드를 위해 충분히 쉼)\n",
+    "        # CPU 휴식 (주행 스레드 양보)\n",
     "        time.sleep(0.05)\n",
     "\n",
     "# 기존 스레드 정리 후 재시작\n",
     "try:\n",
-    "    th_flag = False # 기존 스레드 종료 신호\n",
+    "    th_flag = False\n",
     "    time.sleep(0.5)\n",
-    "    # camera.unobserve_all() # 필요시 주석 해제\n",
     "except:\n",
     "    pass\n",
     "\n",
@@ -194,46 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --------------------------------------------------------------\n",
-    "# 3. 스냅샷 버튼 기능\n",
-    "# --------------------------------------------------------------\n",
-    "SAVE_DIR = \"hsv_snapshots\"\n",
-    "if not os.path.exists(SAVE_DIR):\n",
-    "    os.makedirs(SAVE_DIR)\n",
-    "\n",
-    "snapshot_btn = ipywidgets.Button(description='Snapshot Info', button_style='danger', icon='camera')\n",
-    "snapshot_msg = ipywidgets.Label(value=\"준비됨\")\n",
-    "\n",
-    "def save_snapshot(b):\n",
-    "    with frame_lock:\n",
-    "        if latest_annotated_frame is not None:\n",
-    "            timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "            h_val = colorlblMax.value.split(',')[0]\n",
-    "            filename = f\"HSV_{timestamp}_H{h_val}.jpg\"\n",
-    "            save_path = os.path.join(SAVE_DIR, filename)\n",
-    "            \n",
-    "            # 정보가 그려진 이미지 저장\n",
-    "            cv2.imwrite(save_path, latest_annotated_frame)\n",
-    "            snapshot_msg.value = f\"저장됨: {filename}\"\n",
-    "        else:\n",
-    "            snapshot_msg.value = \"데이터 없음\"\n",
-    "\n",
-    "snapshot_btn.on_click(save_snapshot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "468c3324f6374118ad5fed9cc5db1dc1",
+       "model_id": "f45c5022df0c45c28d4d32d3cf0cc747",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +208,32 @@
    ],
    "source": [
     "# --------------------------------------------------------------\n",
-    "# 4. 자율주행 실행 (메인 스레드 부하 없음)\n",
+    "# 3. 스냅샷 버튼 기능\n",
+    "# --------------------------------------------------------------\n",
+    "SAVE_DIR = \"inspection_snapshots\"\n",
+    "if not os.path.exists(SAVE_DIR):\n",
+    "    os.makedirs(SAVE_DIR)\n",
+    "\n",
+    "snapshot_btn = ipywidgets.Button(description='HD Snapshot', button_style='warning', icon='camera')\n",
+    "snapshot_msg = ipywidgets.Label(value=\"준비됨\")\n",
+    "\n",
+    "def save_snapshot(b):\n",
+    "    with frame_lock:\n",
+    "        if latest_annotated_frame is not None:\n",
+    "            timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "            filename = f\"Insp_HD_{timestamp}.jpg\"\n",
+    "            save_path = os.path.join(SAVE_DIR, filename)\n",
+    "            \n",
+    "            # 저장되는 이미지는 816x616 고화질입니다.\n",
+    "            cv2.imwrite(save_path, latest_annotated_frame)\n",
+    "            snapshot_msg.value = f\"저장 완료({latest_annotated_frame.shape[1]}px): {filename}\"\n",
+    "        else:\n",
+    "            snapshot_msg.value = \"데이터 없음\"\n",
+    "\n",
+    "snapshot_btn.on_click(save_snapshot)\n",
+    "\n",
+    "# --------------------------------------------------------------\n",
+    "# 4. 자율주행 실행 (자동 리사이즈 적용)\n",
     "# --------------------------------------------------------------\n",
     "x_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, description='x')\n",
     "y_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='y')\n",
@@ -262,37 +248,41 @@
     "    ipywidgets.HBox([x_slider, steering_slider])\n",
     "]))\n",
     "\n",
-    "# 자율주행 로직\n",
     "angle = 0.0\n",
     "angle_last = 0.0\n",
     "\n",
     "def execute(change):\n",
     "    global angle, angle_last\n",
-    "    # 주행은 원본 이미지를 바로 사용 (가장 빠름)\n",
+    "    # [중요] 원본(816px) 이미지를 가져옵니다.\n",
     "    image = change['new']\n",
     "    \n",
-    "    xy = model(preprocess(image)).detach().float().cpu().numpy().flatten()\n",
-    "    x = xy[0]\n",
-    "    y = (0.5 - xy[1]) / 2.0\n",
-    "    \n",
-    "    x_slider.value = float(x)\n",
-    "    y_slider.value = float(y)\n",
-    "    \n",
-    "    speed_slider.value = 0.3 # 속도 설정\n",
-    "    \n",
-    "    angle = np.arctan2(x, y)\n",
-    "    pid = angle * 0.2 + (angle - angle_last) * 0.5\n",
-    "    angle_last = angle\n",
-    "    \n",
-    "    steering_slider.value = pid\n",
-    "    \n",
-    "    left_val = max(min(speed_slider.value + steering_slider.value, 1.0), -0.9)\n",
-    "    right_val = max(min(speed_slider.value - steering_slider.value, 1.0), -0.9)\n",
-    "    \n",
-    "    robot.left_motor.value = float(left_val)\n",
-    "    robot.right_motor.value = float(right_val)\n",
+    "    # [핵심 3] AI 모델은 작은 이미지(224px)만 먹을 수 있습니다.\n",
+    "    # 따라서 주행 직전에 224x224로 줄여서 넣어줍니다.\n",
+    "    # 이렇게 하면 고화질 카메라를 쓰면서도 주행 속도는 빠릅니다.\n",
+    "    if image is not None:\n",
+    "        image_resized = cv2.resize(image, (224, 224))\n",
+    "        \n",
+    "        xy = model(preprocess(image_resized)).detach().float().cpu().numpy().flatten()\n",
+    "        x = xy[0]\n",
+    "        y = (0.5 - xy[1]) / 2.0\n",
+    "        \n",
+    "        x_slider.value = float(x)\n",
+    "        y_slider.value = float(y)\n",
+    "        \n",
+    "        speed_slider.value = 0.25 # 속도 설정\n",
+    "        \n",
+    "        angle = np.arctan2(x, y)\n",
+    "        pid = angle * 0.2 + (angle - angle_last) * 0.5\n",
+    "        angle_last = angle\n",
+    "        \n",
+    "        steering_slider.value = pid\n",
+    "        \n",
+    "        left_val = max(min(speed_slider.value + steering_slider.value, 1.0), -0.9)\n",
+    "        right_val = max(min(speed_slider.value - steering_slider.value, 1.0), -0.9)\n",
+    "        \n",
+    "        robot.left_motor.value = float(left_val)\n",
+    "        robot.right_motor.value = float(right_val)\n",
     "\n",
-    "# 자율주행 연결\n",
     "execute({'new': camera.value})\n",
     "camera.observe(execute, names='value')"
    ]
