--- a/test.ipynb
+++ b/test.ipynb
@@ -11,13 +11,14 @@
      "output_type": "stream",
      "text": [
       "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
-      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n"
+      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "[System] WebSocket 프로세서 시작\n"
      ]
     }
@@ -51,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a2f5738e33349208da9437a1bcf86e0",
+       "model_id": "907ddc41d8b6468aaa860ed75300314e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45ad6e05f521436791489aba857affc4",
+       "model_id": "0c1f7e9ab22b4700a6d285296aa18037",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,6 +116,7 @@
     "    icon='camera'\n",
     ")\n",
     "capture_button.on_click(capture_816x616)\n",
+    "\n",
     "\n",
     "# 6. UI 표시\n",
     "print(\"📷 카메라 스트리밍 중... 버튼을 눌러 816x616으로 저장하세요.\")\n",
